[package]
name = "sc-util"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "scu"
path = "src/main.rs"

[dependencies]
app_dirs2 = "2.5.4"
clap = { version = "4.0.15", features = ["derive"] }
normpath = "0.3.2"
serde = { version = "1.0.145 ", features = ["derive"] }
serde_json = "1.0.86"

[profile.release]
lto = "fat"
panic = "abort"
strip = "symbols"
