[package]
name = "sc-util"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "scu"
path = "src/main.rs"

[dependencies]
app_dirs2 = "2.5.4"
clap = { version = "4.0.29", features = ["derive"] }
normpath = "1.0.0"
serde = { version = "1.0.150 ", features = ["derive"] }
serde_json = "1.0.89"

[profile.release]
lto = "fat"
panic = "abort"
strip = "symbols"
