[package]
name = "sc-util"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "scu"
path = "src/main.rs"

[dependencies]
app_dirs2 = "2.5.5"
clap = { version = "4.3.2", features = ["derive"] }
normpath = "1.1.1"
serde = { version = "1.0.163 ", features = ["derive"] }
serde_json = "1.0.96"

[profile.release]
lto = "fat"
panic = "abort"
strip = "symbols"
